--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "express-graphql": "^0.12.0",
     "express-validator": "^5.3.0",
     "graphql": "^16.6.0",
     "jsonwebtoken": "^8.3.0",
